CaseEntry Screen added by thiru.

--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -895,5 +895,17 @@
     "secure": false,
     "changeOrigin": true,
     "logLevel": "debug"
+  },
+  "/testandreportstudio/api/caseentry/*": {
+    "target": "http://localhost:3000",
+    "secure": false,
+    "changeOrigin": true,
+    "logLevel": "debug"
+  },
+  "/testandreportstudio/api/casemachine/*": {
+    "target": "http://localhost:3000",
+    "secure": false,
+    "changeOrigin": true,
+    "logLevel": "debug"
   }
 }
