updated changes done by priya.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "@material/dialog": "^13.0.0",
         "@material/form-field": "^13.0.0",
         "@material/toolbar": "2.3.0",
-        "@ng-bootstrap/ng-bootstrap": "8.0.1",
+        "@ng-bootstrap/ng-bootstrap": "4.1.0",
         "@ngx-translate/core": "^13.0.0",
         "@ngx-translate/http-loader": "^7.0.0",
         "@swimlane/ngx-charts": "^19.0.1",
@@ -50,6 +50,13 @@
         "ag-grid-angular": "25.3.0",
         "ag-grid-community": "25.3.0",
         "angular-animations": "^0.11.0",
+        "angular-calendar": "^0.27.1",
+        "angular-draggable-droppable": "4.2.0",
+        "angular-resizable-element": "3.2.4",
+        "rrule": "2.6.0",
+        "calendar-utils": "0.3.0",
+        "flatpickr": "4.5.7",
+        "angularx-flatpickr": "6.1.0",
         "angular-d3-charts": "^5.0.0",
         "angular-datatables": "11.1.1",
         "angular-font-awesome": "^3.1.2",
@@ -65,7 +72,7 @@
         "d3-charts": "0.0.11-0",
         "datatables.net": "1.10.24",
         "datatables.net-dt": "1.10.24",
-        "date-fns": "^2.30.0",
+        "date-fns": "1.29.0",
         "diagram-editor": "0.0.15",
         "file-saver": "^2.0.5",
         "font-awesome": "^4.7.0",
@@ -110,7 +117,7 @@
         "@types/datatables.net": "1.10.19",
         "@types/jasmine": "3.6.0",
         "@types/jquery": "3.5.5",
-        "@types/lodash": "^4.14.74",
+        "@types/lodash": "4.14.116",
         "@types/node": "12.11.1",
         "babel-loader": "8.2.2",
         "codelyzer": "6.0.0",
