--- a/package.json
+++ b/package.json
@@ -51,21 +51,19 @@
         "ag-grid-community": "25.3.0",
         "angular-animations": "^0.11.0",
         "angular-calendar": "^0.27.1",
-        "angular-draggable-droppable": "4.2.0",
-        "angular-resizable-element": "3.2.4",
-        "rrule": "2.6.0",
-        "calendar-utils": "0.3.0",
-        "flatpickr": "4.5.7",
-        "angularx-flatpickr": "6.1.0",
         "angular-d3-charts": "^5.0.0",
         "angular-datatables": "11.1.1",
+        "angular-draggable-droppable": "4.2.0",
         "angular-font-awesome": "^3.1.2",
         "angular-fusioncharts": "^3.2.0",
+        "angular-resizable-element": "3.2.4",
         "angular-sparklines": "^1.0.2",
         "angular-svg-round-progressbar": "^7.0.0",
+        "angularx-flatpickr": "6.1.0",
         "apexcharts": "3.6.4",
         "bcrypt": "5.0.0",
         "bootstrap": "4.6.0",
+        "calendar-utils": "0.3.0",
         "canvasjs": "^1.8.3",
         "chart.js": "^2.9.4",
         "d3": "^7.0.3",
@@ -73,8 +71,10 @@
         "datatables.net": "1.10.24",
         "datatables.net-dt": "1.10.24",
         "date-fns": "1.29.0",
+        "dateformat": "^5.0.3",
         "diagram-editor": "0.0.15",
         "file-saver": "^2.0.5",
+        "flatpickr": "4.5.7",
         "font-awesome": "^4.7.0",
         "fullcalendar": "4.0.0-alpha.4",
         "fullcalendar-scheduler": "4.0.0-alpha.4",
@@ -102,6 +102,7 @@
         "primeflex": "3.0.0",
         "primeicons": "4.1.0",
         "primeng": "11.4.2",
+        "rrule": "2.6.0",
         "rxjs": "6.6.0",
         "serializer.ts": "0.0.12",
         "simplebar": "^5.3.5",
