updated changes done by priya.

--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -907,5 +907,11 @@
     "secure": false,
     "changeOrigin": true,
     "logLevel": "debug"
+  },
+  "/testandreportstudio/api/regionmaster/*": {
+    "target": "http://localhost:3000",
+    "secure": false,
+    "changeOrigin": true,
+    "logLevel": "debug"
   }
 }
