--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
         "@types/d3": "^7.0.0",
         "@types/datatables.net": "1.10.19",
         "@types/jasmine": "3.6.0",
-        "@types/jquery": "3.5.5",
+        "@types/jquery": "^3.5.16",
         "@types/lodash": "4.14.116",
         "@types/node": "12.11.1",
         "babel-loader": "8.2.2",
