--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "@angular/flex-layout": "11.0.0-beta.33",
         "@angular/forms": "11.0.5",
         "@angular/localize": "11.0.5",
-        "@angular/material": "11.2.1",
+        "@angular/material": "^11.2.1",
         "@angular/platform-browser": "11.0.5",
         "@angular/platform-browser-dynamic": "11.0.5",
         "@angular/router": "11.0.5",
@@ -107,6 +107,7 @@
         "serializer.ts": "0.0.12",
         "simplebar": "^5.3.5",
         "tooltip.js": "^1.3.3",
+        "ts-luxon": "^4.3.2",
         "tslib": "2.0.0",
         "zone.js": "0.10.2"
     },
@@ -118,6 +119,7 @@
         "@types/datatables.net": "1.10.19",
         "@types/jasmine": "3.6.0",
         "@types/jquery": "^3.5.16",
+        "@material/list": "^14.0.0",
         "@types/lodash": "4.14.116",
         "@types/node": "12.11.1",
         "babel-loader": "8.2.2",
