--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@material/card": "^12.0.0",
         "@material/dialog": "^13.0.0",
         "@material/form-field": "^13.0.0",
+        "@material/list": "^14.0.0",
         "@material/toolbar": "2.3.0",
         "@ng-bootstrap/ng-bootstrap": "4.1.0",
         "@ngx-translate/core": "^13.0.0",
